# pwn-german-dictionary-2010

./: .buildconfig  README.md  meson.build
src/: meson.build  pwn-german-dictionary-2010-plugin.c  pwn-german-dictionary-2010-prefs.c  pwn-german-dictionary-2010-prefs.h  pwn-german-dictionary-2010-private.h  pwn-german-dictionary-2010-window.c  pwn-german-dictionary-2010-window.h  pwn-german-dictionary-2010.c  pwn-german-dictionary-2010.gresource.xml  pwn-german-dictionary-2010.h  pwn-german-dictionary-2010.plugin
src/gtk/: menus.ui
